Fixed Images Problem

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="../images/1.jpg" alt="">
+                <img src="images/1.jpg" alt="">
                 <h2 class="h-secondary center">Food Catering</h2>
                 <p class="center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos blanditiis, cumqu
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam aperiam, consequuntur culpa nobis esse totam nulla porro illum veniam, aspernaturghghghghghgh dolorem ad accusantium.  </p>
             </div>
             <div class="box">
-                <img src="../images/2.jpg" alt="">
+                <img src="images/2.jpg" alt="">
                 <h2 class="h-secondary center">Bulk   Ordering</h2>
                 <p class="center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos blanditiis, cumque 
                     lor m23Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam aperiam, consequuntur culpa nobis esse totam nulla porro illum veniam, aspernatur dolorem ad accusantium.</p>
             </div>
             <div class="box">
-                <img src="../images/3.jpg" alt="">
+                <img src="images/3.jpg" alt="">
                 <h2 class="h-secondary center">Food   Delivery</h2>
                 <p class="center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos blanditiis, cumque 
                     lor m23Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam aperiam, consequuntur culpa nobis esse totam nulla porro illum veniam, aspernatur dolorem ad accusantium.</p>
@@ -57,19 +57,19 @@
         <h1 class="h-primary center">Our Clients</h1>
         <div id="clients">
             <div class="client-items">
-                <img src="../images/logo1.png" alt="">
+                <img src="images/logo1.png" alt="">
             </div>
             <div class="client-items">
-                <img src="../images/logo2.png" alt="">
+                <img src="images/logo2.png" alt="">
             </div>
             <div class="client-items">
-                <img src="../images/logo3.png" alt="">
+                <img src="images/logo3.png" alt="">
             </div>
             <div class="client-items">
-                <img src="../images/logo4.png" alt="">
+                <img src="images/logo4.png" alt="">
             </div>
             <div class="client-items">
-                <img src="../images/logo5.png" alt="">
+                <img src="images/logo5.png" alt="">
             </div>
         </div>
     </section><hr>
