updated the css , fixex the issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <ul>
             <li class="item"><a href="#home"> Home</a></li>
-            <li class="item"><a href="#services"> Services</a></li>
+            <li class="item"><a href="#services-container"> Services</a></li>
             <li class="item"><a href="#client-section">Our Clients </a></li>
             <li class="item"><a href="#contact"> Contact us</a></li>
         </ul>
@@ -30,29 +30,38 @@
        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.  </p>
         <button class="btn">Order now</button>
     </section>
-    <section class="services-container">
+    <section id="services-container">
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="images/1.jpg" alt="">
+                <div class="img-container">
+                    <img src="images/1.jpg" alt="">
+                </div>
                 <h2 class="h-secondary center">Food Catering</h2>
-                <p class="center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos blanditiis, cumqu
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam aperiam, consequuntur culpa nobis esse totam nulla porro illum veniam, aspernaturghghghghghgh dolorem ad accusantium.  </p>
+                <p class="center">Our exquisite food catering services bring a delightful culinary experience to your events. Immerse your guests in a
+                symphony of flavors with our carefully crafted menus, ensuring an unforgettable dining experience that complements your
+                special occasion. </p>
             </div>
             <div class="box">
-                <img src="images/2.jpg" alt="">
+                <div class="img-container">
+                    <img src="images/2.jpg" alt="">
+                </div>
                 <h2 class="h-secondary center">Bulk   Ordering</h2>
-                <p class="center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos blanditiis, cumque 
-                    lor m23Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam aperiam, consequuntur culpa nobis esse totam nulla porro illum veniam, aspernatur dolorem ad accusantium.</p>
+                <p class="center">Experience the ease of food ordering with us. From the comfort of your home, savor a diverse menu featuring delectable
+                dishes. Our seamless online platform ensures quick, reliable, and hassle-free delivery, bringing restaurant-quality
+                meals right to your doorstep.</p>
             </div>
             <div class="box">
-                <img src="images/3.jpg" alt="">
+                <div class="img-container">
+                    <img src="https://www.shutterstock.com/image-vector/food-delivery-man-riding-red-600nw-1327144634.jpg" alt="">
+                </div>
                 <h2 class="h-secondary center">Food   Delivery</h2>
-                <p class="center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos blanditiis, cumque 
-                    lor m23Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam aperiam, consequuntur culpa nobis esse totam nulla porro illum veniam, aspernatur dolorem ad accusantium.</p>
+                <p class="center ">Simplify your catering needs with our bulk delivery services. Whether it's a corporate event or a family gathering, our
+                efficient delivery system ensures that fresh, high-quality food is delivered in quantity, making your gatherings a
+                culinary success.</p>
             </div>
         </div>
-    </section><hr>
+    </section>
     <section id="client-section">
         <h1 class="h-primary center">Our Clients</h1>
         <div id="clients">
@@ -72,7 +81,7 @@
                 <img src="images/logo5.png" alt="">
             </div>
         </div>
-    </section><hr>
+    </section>
     <section id="contact">
         <h1 class="h-primary center">Contact Us</h1>
         <div id="contact-box">
@@ -95,7 +104,7 @@
                 </div>
             </form>
         </div>
-    </section><hr>
+    </section>
     <footer>
         <div class="center">
             Copyright &copy www.Akramsdream.com . All righs reserved
